@@ -1,5 +1,10 @@
 2019-08-30  Eric Botcazou  <ebotcazou@adacore.com>
 
+	* gcc-interface/utils.c (build_template): Deal with parameters
+	passed by pointer to component of multi-dimensional arrays.
+
+2019-08-30  Eric Botcazou  <ebotcazou@adacore.com>
+
 	* gcc-interface/decl.c (annotate_value) <CALL_EXPR>: Inline the call
 	also if List_Representation_Info is greater than 3.
 
